force-app/main/default/objects/Grille_Dyneff__mdt/Grille_Dyneff__mdt.object-meta.xml
<CustomObject>
    <label>Grille Dyneff</label>
    <pluralLabel>Grilles Dyneff</pluralLabel>
</CustomObject>