force-app/main/default/objects/Grille_Dyneff__mdt/fields/Date_fin_maximale__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_maximale__c</fullName>
    <label>Date fin maximale</label>
    <type>Date</type>
</CustomField>