force-app/main/default/objects/Grille_Dyneff__mdt/fields/Prix_capacite_base__c.field-meta.xml
<CustomField>
    <fullName>Prix_capacite_base__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix capacité base</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>