force-app/main/default/objects/Grille_Dyneff__mdt/fields/Puissance_souscrite__c.field-meta.xml
<CustomField>
    <fullName>Puissance_souscrite__c</fullName>
    <label>Puissance souscrite (kVA)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>